RbA Build/src/objects/Financial_Account_Number__c.object
<CustomObject>
    <description>Stores financial account numbers used in the journal entries and Baan ERP integration</description>
    <fields>
        <fullName>Account_Label__c</fullName>
        <description>The account label for GL Accounts</description>
        <inlineHelpText>The account label for GL Accounts</inlineHelpText>
        <label>Account Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Type used to filter which accounts are available for selection.</description>
        <inlineHelpText>Type used to filter which accounts are available for selection.</inlineHelpText>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Intercompany Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accts Receivable Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Labor Transfer Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACH Payment Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond Refund Payment Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIP External Labor Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order Adjustment Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIP Internal Labor Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Discount Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Deposits Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Display Cost Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card AmEx Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Diners Club Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous Receipts Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card Discover Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Service Revenue Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card VM Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF Check Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Refund CC Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Refunds Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Refund Check Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product COGS Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit on Account Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remake Expense Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Acct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Rewards Acct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the financial account</description>
        <inlineHelpText>Description of the financial account</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Store_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select which store configuration to relate this account number.</description>
        <inlineHelpText>Select which store configuration to relate this account number.</inlineHelpText>
        <label>Store Configuration</label>
        <referenceTo>Store_Configuration__c</referenceTo>
        <relationshipLabel>Financial Account Numbers</relationshipLabel>
        <relationshipName>Financial_Account_Numbers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financial Account Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Account Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>